# fatsecret-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_bot.py
.codex/: context.md
src/fatsecret_bot/: __init__.py  config.py  fatsecret_client.py  main.py  models.py  storage.py  sync.py  telegram_bot.py
tests/: test_fatsecret_parser.py  test_recipe_list_input.py  test_storage.py  test_sync.py  test_telegram_formatting.py
