[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fatsecret-bot"
version = "0.1.0"
description = "Telegram bot for syncing FatSecret recipes between two accounts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
  "python-dotenv>=1,<2",
  "python-telegram-bot>=21,<23",
]

[project.scripts]
fatsecret-bot = "fatsecret_bot.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
cache_dir = "temp/pytest_cache"
